--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	    <div class="container">
 			<div class="row">
 				<div class="span3">
-					<img src="images/savenkov_photo.jpg" alt="Denis Savenkov" width="250" />
+					<img src="images/denxx_phd.jpg" alt="Denis Savenkov" width="250" />
 				</div>
 				<div class="span9">
 					<h1>Denis Savenkov</h1>
